# leoAtFit2

./: README.md
0ZS/AVS/: README.md
0ZS/AVS/Projekt 1/: BatchMandelCalculator.cc  BatchMandelCalculator.h  HODNOCENÍ  LineMandelCalculator.cc  LineMandelCalculator.h  MB-xondry02.txt
0ZS/AVS/Projekt 2/: HODNOCENÍ  PMC-xondry02.txt
0ZS/BIS/: README.md
0ZS/BMS/: README.md
0ZS/BMS/Projekt/: Makefile  decoder.cpp  decoder.h  encoder.cpp  main.cpp  maths.cpp  maths.h  matrices_generator.cpp  matrices_generator.h  matrices_io.cpp  matrices_io.h
0ZS/GAL/: README.md
0ZS/GAL/Projekt/: .gitignore  BMASolver.cpp  BMASolver.h  CMakeLists.txt  Greedy2Solver.cpp  Greedy2Solver.h  GreedySolver.cpp  GreedySolver.h  MISSolver.h  RamseySolver.cpp  RamseySolver.h  RandomSolver.cpp  RandomSolver.h  WheelFreeRamseySolver.cpp  WheelFreeRamseySolver.h  main.cpp
0ZS/GAL/Projekt/OGDF/include/ogdf/basic/internal/: config_autogen.h
0ZS/MSP/: README.md
0ZS/MSP/Projekt/: Ukol1.xlsx  Ukol2.ipynb  pt2_data.csv
0ZS/PDI/: README.md
0ZS/SCO/: README.md
0ZS/SUI/: README.md
0ZS/SUI/Projekt 1/: sui-solution.cc
0ZS/SUI/Projekt 2/: xondry02.ipynb
0ZS/SUI/Projekt 3/: xondry02.py
0ZS/TIN/: README.md
0ZS/UPA/: README.md
0ZS/UPA/Projekt 1/: README.md
0ZS/UPA/Projekt 2/: requirements.txt
0ZS/UPA/Projekt 3/: README  build.sh  data.tsv  run.sh  urls.txt
0ZS/ZZN/: README.md
0ZS/ZZN/Projekt – data/: data_transactions_savoury_food_flow.csv  data_transactions_sell_only.csv  data_transactions_users.csv  data_transactions_with_articles.csv
1LS/BZA/: README.md
1LS/FLP/: README.md
1LS/FLP/Projekt 1 – Haskell – ECDSA/: Makefile  README.md  flp-proj1.cabal  stack.yaml
1LS/FLP/Projekt 1 – Haskell – ECDSA/src/: ArgParsing.hs  ECDSA.hs  ECTypes.hs  EllipticCurve.hs  InputIO.hs  Main.hs
1LS/FLP/Projekt 1 – Haskell – ECDSA/test/curves/: 01_nist-p-224  02_bn-2-254  03_nist-p-256  04_secp256k1  05_brainpool-p384t1
1LS/FLP/Projekt 1 – Haskell – ECDSA/test/testprog/: Program.cs  Utils.cs
1LS/FLP/Projekt 2 – Prolog – Turingův stroj/: HODNOCENÍ  Makefile  README.md  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  turing.pl
1LS/KRY/: README.md
1LS/KRY/Projekt 1 – afinní šifra/: Analysis.cpp  Analysis.h  CMakeLists.txt  Constants.cpp  Constants.h  Crypto.cpp  Crypto.h  (+7 more)
1LS/PDS/: README.md
1LS/PRL/: README.md
1LS/WAP/: README.md
(+57 files in other folders)
