name:                flp-proj1
version:             1.0.0.0
license:             MIT
author:              Ondřej Ondryáš
maintainer:          ondryaso@ondryaso.eu
copyright:           2023 Ondřej Ondryáš
build-type:          Simple
cabal-version:       >=1.10

executable leo-flp-proj1
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:    ArgParsing
                       ECTypes
                       InputIO
                       EllipticCurve
                       ECDSA
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec, random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
